fix: download schedule button broken on mobile

--- a/client/css/app/misc.styl
+++ b/client/css/app/misc.styl
@@ -29,7 +29,6 @@
 
 .download-button
   margin-top: 15px
-  padding-right: 20px
 
 .ink-button.blue
   background: #0278AB
